# A-Team-CLI

./: .gitignore  CONTRIBUTING.md  MISSION.md  README.md  pyproject.toml  test_gemini.py  test_results.txt
.context/: FILE_MANIFEST.md  FRICTION_ANALYSIS.md  PROMPT_REFERENCE.md  QUICKSTART.md  README.md  SECURITY.md  START_HERE.md  WEB_DASHBOARD_DESIGN.md  config.yaml  specs.md  tasks.md  technical.md
ateam/: __init__.py
ateam/cli/: __init__.py  chat.py  dashboard.py  main.py
ateam/core/: __init__.py  config.py  context.py  history.py  indexer.py  room.py  router.py
ateam/mcp/: __init__.py  manager.py
ateam/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py
ateam/security/: __init__.py  api_keys.py  critic.py  rate_limiter.py  trust.py  validation.py
ateam/tools/: base.py  file_tools.py  manager.py  search.py  shell.py
ateam/utils/: diff_viewer.py  exporter.py  token_counter.py
ateam/web/: README.md  app.js  index.html  server.py  style.css
tests/: __init__.py  test_installation.py  test_multi_agent.py
tests/integration/: __init__.py  test_security_integration.py
tests/unit/: __init__.py  test_api_keys.py  test_context.py  test_critic.py  test_exporter.py  test_history.py  test_indexer.py  test_providers.py  test_rate_limiter.py  test_room.py  test_router.py  test_search.py  test_tools.py  test_trust.py  test_validation.py
